--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Blog by a-zuk</title>
+    <title>Adam Żuk, Blog na zaliczenie wykładu z Środowiska Programisty</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Blog</h1>
-        <h2>mój blog</h2>
+        <h1>Mój blog</h1>
+        <h2>Adam Żuk</h2>
 
         <section id="downloads">
-          <a href="https://github.com/a-zuk/blog/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/a-zuk/blog/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/a-zuk/blog" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/a-zuk/blog/zipball/master" class="btn">Ściągnij jako .zip</a>
+          <a href="https://github.com/a-zuk/blog/tarball/master" class="btn">Ściągnij jako .tar.gz</a>
+          <a href="https://github.com/a-zuk/blog" class="btn btn-github"><span class="icon"></span>Zobacz na GitHubie</a>
         </section>
       </div>
     </header>
@@ -29,9 +29,9 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Witam na moim blogu</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Tutaj pojawi się zawartość mojego bloga.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
