--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="container">
         <h1>Mój blog</h1>
         <h2>Adam Żuk</h2>
+        <p>trolololololo</p>
 
         <section id="downloads">
           <a href="https://github.com/a-zuk/blog/zipball/master" class="btn">Ściągnij jako .zip</a>
